--- a/main.css
+++ b/main.css
@@ -4,15 +4,14 @@ GENERAL
 
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  overflow: auto;
 }
 
 /* Site Body*/
 
 html, body {
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -37,8 +36,6 @@ NAVIGATION
 
 nav {
   width: 100%;
-  padding: 20px 0;
-  margin: 20px 0 0;
 }
 
 #logo {
@@ -51,10 +48,10 @@ nav {
 
 nav ul {
   display: inline-block;
-  text-align: right;
+  float: right;
+  text-align: justify;
   list-style: none;
-  margin-left: 45%;
-  padding: 30px;
+  margin-top: 5%;
 }
 
 nav li {
@@ -105,6 +102,23 @@ Homepage Images
   max-width: 30%;
   margin: 5% 1.66%;
 }
+
+/**************************************
+Contact Images
+***************************************/
+
+.contact-h1-style {
+  text-align: center;
+}
+
+.contact-h2-style {
+   list-style: none;
+}
+
+.contact-name-style{
+  list-style: none;
+}
+
 
 /**************************************
 FOOTER
