--- a/main.css
+++ b/main.css
@@ -103,8 +103,47 @@ Homepage Images
   margin: 5% 1.66%;
 }
 
+
 /**************************************
-Contact Images
+FOOTER
+***************************************/
+
+footer {
+  clear: both;
+  width: 100%;
+  background-color: #4C4850;
+  color: whitesmoke;
+  text-align: center;
+}
+
+.social-icon {
+  max-width: 40px;
+  max-height: 40px;
+}
+
+.page-wrap {
+  min-height: 100%;
+  /* equal to footer height */
+  margin-bottom: -80px;
+}
+
+.page-wrap:after {
+  content: "";
+  display: block;
+}
+
+footer, .page-wrap:after {
+  height: 80px;
+}
+
+
+/**************************************
+
+***************************************/
+
+
+/**************************************
+Contact Page CSS
 ***************************************/
 
 .contactImg {
@@ -154,42 +193,6 @@ hr {
   width: 40%;
 }
 
-/**************************************
-FOOTER
-***************************************/
-
-footer {
-  clear: both;
-  width: 100%;
-  background-color: #4C4850;
-  color: whitesmoke;
-  text-align: center;
-}
-
-.social-icon {
-  max-width: 40px;
-  max-height: 40px;
-}
-
-.page-wrap {
-  min-height: 100%;
-  /* equal to footer height */
-  margin-bottom: -80px;
-}
-
-.page-wrap:after {
-  content: "";
-  display: block;
-}
-
-footer, .page-wrap:after {
-  height: 80px;
-}
-
-
-/**************************************
-
-***************************************/
 
 
 
