--- a/main.css
+++ b/main.css
@@ -1,9 +1,11 @@
 /**************************************
 GENERAL
 ***************************************/
+@import url(https://fonts.googleapis.com/css?family=Roboto);
 
 * {
   box-sizing: border-box;
+  font-family: 'Roboto', Helvetica, sans-serif;
 }
 
 /* Site Body*/
